@@ -5,7 +5,7 @@
 
 	<groupId>ch.rasc</groupId>
 	<artifactId>bsoncodec-test</artifactId>
-	<version>1.0.6</version>
+	<version>1.0.7</version>
 
 	<inceptionYear>2015</inceptionYear>
 
@@ -61,7 +61,7 @@
 	    <dependency>
 	        <groupId>org.mongodb</groupId>
 	        <artifactId>mongodb-driver-sync</artifactId>
-	        <version>5.6.1</version>
+	        <version>5.6.3</version>
 	    </dependency>
 
 		<dependency>
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<version>3.4.8</version>
+			<version>4.24.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -92,9 +92,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>6.0.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -104,12 +104,21 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.14.1</version>
+				<version>3.15.0</version>
 				<configuration>
 					<source>11</source>
 					<target>11</target>
 					<parameters>true</parameters>
+					<compilerArgs>
+						<arg>-proc:full</arg>
+					</compilerArgs>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.4</version>
 			</plugin>
 
 			<plugin>
